Sun Apr  2 18:16:56 2006  Tim Janik  <timj@gtk.org>

	* Makefile.decl: auto-add GENERATED to MAINTAINERCLEANFILES.
	added GENERATED_CLEANFILES for generated files to be removed upon
	make clean. 

	* beast-gtk/Makefile.am: fixed dependencies. simplified build rules,
	integrated with Makefile.decl. removed lots of cruft.

	* beast-gtk/*.c: various minor fixes.

Sun Apr  2 16:56:57 2006  Tim Janik  <timj@gtk.org>

	* configure.in: removed workaround variables.

	* beast-gtk/Makefile.am: automake fix to build versioned beast.

	* beast-gtk/gxk/Makefile.am: linkage flags fixups.

	* beast-gtk/gxk/gxkstock.c:
	* beast-gtk/gxk/gxkradget.c: fixed missing initializations.

	* shell/Makefile.am: automake fix to build versioned shell.

Sun Apr  2 03:44:31 2006  Tim Janik  <timj@gtk.org>

	* Makefile.decl: declare GENERATED to list generated files.
	declare GENERATED_EXTRA_DIST for files that automatically end up
	in GENERATED and EXTRA_DIST.
	define _BIRNET_SOURCE_EXTENSIONS for the whole source tree by
	adding it to AM_CXXFLAGS and AM_CFLAGS.

	* configure.in: moved libmad check into BSE namespace. presence is
	now indicated by the BSE_HAVE_LIBMAD macro provided by topconfig.h.
	removed cruft.

Thu Mar 30 20:49:43 2006  Tim Janik  <timj@gtk.org>

	* autogen.sh: depend on automake-1.9.

	* acbeast.m4: check for -Wno-pointer-sign support before using it.

Thu Mar 30 20:16:08 2006  Tim Janik  <timj@gtk.org>

	* acbeast.m4: add -Wno-pointer-sign when comiling mit gcc-4.2 to omit
	bogus warnings about signedness of string pointers in C.

	* autogen.sh: permit compilatiopn with automake 1.9.

	* birnet/birnetring.c: fixed bogus "const" in return type.

	* birnet/birnetthread.c: fixed strict aliasing warning.

	* **/Makefile.am: fixed automake "+=" warnings.

Wed Mar 29 01:54:38 2006  Tim Janik  <timj@gtk.org>

	* web/wiki.doxi: PHP fixups to tell robots: content="noindex" for
	tmeporary EditThisPage wiki pages.

	* web/style/beast-style.css: beautify wiki tables somewhat.
